--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             background: #28a745;
             padding: 15px;
             color: white;
+            position: relative;
         }
         .navbar img {
             height: 80px;
@@ -34,11 +35,48 @@
             display: flex;
             gap: 15px;
         }
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
         .search-box {
             padding: 5px;
             border-radius: 5px;
             border: none;
         }
+
+        /* Hamburger Menu */
+        .hamburger {
+            display: none;
+            font-size: 30px;
+            cursor: pointer;
+        }
+        
+        @media (max-width: 768px) {
+            .nav-controls {
+                display: none;
+                flex-direction: column;
+                background: #28a745;
+                width: 100%;
+                text-align: center;
+                padding: 10px 0;
+                position: absolute;
+                top: 100%;
+                left: 0;
+            }
+            .nav-links {
+                flex-direction: column;
+            }
+            .hamburger {
+                display: block;
+            }
+        }
+
+        .show {
+            display: flex !important;
+        }
+
         .container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -58,24 +96,13 @@
             object-fit: cover;
             border-radius: 5px;
         }
-        @media (max-width: 768px) {
-            .navbar {
-                flex-direction: column;
-                text-align: center;
-            }
-            .nav-controls {
-                flex-direction: column;
-            }
-            .nav-links {
-                flex-direction: column;
-            }
-        }
     </style>
 </head>
 <body>
     <nav class="navbar">
         <img src="logo.png" alt="Logo">
-        <div class="nav-controls">
+        <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+        <div class="nav-controls" id="navControls">
             <div class="nav-links">
                 <a href="#">Home</a>
                 <a href="#">About</a>
@@ -84,7 +111,7 @@
             <input type="text" class="search-box" placeholder="Search...">
         </div>
     </nav>
-    
+
     <div class="container">
         <div class="card">
             <img src="apple.png" alt="Apple">
@@ -111,7 +138,7 @@
             <p>Sweet and perfect for snacks.</p>
         </div>
         <div class="card">
-            <img src="watermelon.png "alt="Watermelon">
+            <img src="watermelon.png" alt="Watermelon">
             <h3>Watermelon</h3>
             <p>Price: $1.5/kg</p>
             <p>Refreshing summer fruit.</p>
@@ -159,5 +186,11 @@
             <p>Rich in nutrients and antioxidants.</p>
         </div>
     </div>
+
+    <script>
+        function toggleMenu() {
+            document.getElementById("navControls").classList.toggle("show");
+        }
+    </script>
 </body>
 </html>
